--- a/certifications.html
+++ b/certifications.html
@@ -73,7 +73,7 @@
         <br><br><br><br><br><br>
     <p class="generic-text-header">Certifications</p>
         <br><br><br><br>
-        <p class="certifications-text">These are the certifications that I have earned and courses I have taken.</p>
+        <p class="certifications-text">These are the certifications that I have earned and courses I have taken. You can view the full list on my <a class="standard-link" href="linkedin.html">LinkedIn</a> profile.</p>
 
         <br><br>
 
