Added separate Socials page and updated index content with IT stuff

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <a class="sidebar-link" href="projects.html">Projects</a>
         <a class="sidebar-link" href="downloads.html">Downloads</a>
         <a class="sidebar-link" href="support.html">Support</a>
+        <a class="sidebar-link" href="socials.html">Socials</a>
     </div>
 </div>
 <!-- End Header Section-->
@@ -123,6 +124,11 @@
                     class="standard-link" href="https://go.dev">Go language</a></u> to create a <u><a
                     class="standard-link" href="https://github.com/SpaceGameDev568/Charles">command line application</a></u>
             to automate some basic computing tasks and to make it easier for me to debug issues with other apps.</p>
+        <br><br>
+
+        <p class="about-me-bio">More recently I've taken interest in the IT industry and I'm looking to get a career in tech when I graduate high school.
+            I've been teaching myself network administration and automation in my free time. In October 2023 I completed the Google IT Support
+            Specialist Certificate course in order to prepare myself for an entry-level job in the industry. You can see all the certificates I've earned on the <u><a class="standard-link" href="certifications.html">Certifications</a></u> page or on my <u><a class="standard-link" href="linkedin.html">LinkedIn</a></u> profile.</p>
     
 </section>
 <br><br>
@@ -174,6 +180,20 @@
             Visual Studio/VS Code
             <br>
             VMware Workstation
+            <br><br>
+            <b class="experience-minor-h">IT Services:</b>
+            <br><br>
+            Cloudflare Zero Trust
+            <br>
+            Zoho Mail
+            <br>
+            Freshdesk
+            <br>
+            Google Cloud Platform
+            <br>
+            Amazon Web Services
+            <br>
+            Cloudflare Pages
         </p>
 </section>
 <br><br>
@@ -202,17 +222,7 @@
     <p class="generic-text-header">My Socials</p>
     <br><br>
     <p class="socials-p">
-        <a class="standard-link" href="https://github.com/SpaceGameDev568">GitHub</a>
-        <br><br>
-        <a class="standard-link" href="linkedin.html">LinkedIn</a>
-        <br><br>
-        <a class="standard-link" href="https://youtube.com/@spacegamedev">YouTube</a>
-        <br><br>
-        <a class="standard-link" href="https://steamcommunity.com/id/spacegamedev/">Steam</a>
-        <br><br>
-        <a class="standard-link" href="https://trello.com/u/spacegamedev568/activity">Trello</a>
-        <br><br>
-        <a class="standard-link" href="https://ficsit.app/user/5GqLMHyzA3myPG">Satisfactory Mod Repository</a>
+        Check my <a class="standard-link" href="socials.html">Socials</a> page to see my social media accounts.
         <br><br>
     </p>
 </section>
