--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,7 @@
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
+        <a class="sidebar-link" href="socials.html">Socials</a>
       </div>
     </div>
     <!-- End Header Section-->
