--- a/socials.html
+++ b/socials.html
@@ -13,7 +13,7 @@
           type="image/ico"/>
     <link href="css\main.css" rel="stylesheet">
     <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="stylesheet">
-    <link href="css\certifications.css" rel="stylesheet">
+    <link href="css\socials.css" rel="stylesheet">
     <link href="https://spacegamedev-assets.pages.dev" rel="preconnect"/>
     <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2"
           rel="preload">
@@ -71,42 +71,23 @@
 <!-- End Header Section-->
 <div id="page-wrapper">
     <div class="content-wrapper">
-        <br><br><br><br><br><br>
-    <p class="generic-text-header">Certifications</p>
-        <br><br><br><br>
-        <p class="certifications-text">These are the certifications that I have earned and courses I have taken. You can view the full list on my <a class="standard-link" href="linkedin.html">LinkedIn</a> profile.</p>
+            <br><br><br><br><br><br>
+            <p class="generic-text-header">My Socials</p>
+            <br><br>
+            <div class="socials-links">
+                <a class="social-link" href="https://github.com/SpaceGameDev568"><img class="github-social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/github.svg" alt="GitHub"><p class="social-link-label">GitHub</p></a>
 
-        <br><br>
+                <a class="social-link" href="linkedin.html"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/linkedin.webp" alt="LinkedIn"><p class="social-link-label">LinkedIn</p></a>
 
-        <a class="certifications-badge" href="https://www.credly.com/earner/earned/badge/a0e09d60-b274-4675-9ad3-db3cafb271dd"><img src="https://spacegamedev-assets.pages.dev/images/webp/google-it-support-badge.webp"></a>
+                <a class="social-link" href="https://youtube.com/@spacegamedev"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/youtube.webp" alt="YouTube"><p class="youtube-link-label">YouTube</p></a>
 
-        <br><br>
+                <a class="social-link" href="https://steamcommunity.com/id/spacegamedev/"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/steam.webp" alt="Steam"><p class="social-link-label">Steam</p></a>
 
-        <a class="certificate" href="certificates/Coursera%20Google%20IT%20Support.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/it-support-thumbnail.webp"><br>Google IT Support</a>
+                <a class="social-link" href="https://trello.com/u/spacegamedev568/activity"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/trello.webp" alt="Trello"><p class="social-link-label">Trello</p></a>
 
-        <br><br>
-
-        <a class="certificate" href="certificates/Coursera%20Technical%20Support%20Fundamentals.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/tech-support-fundamentals.webp"><br>Technical Support Fundamentals</a>
-
-        <br><br>
-
-        <a class="certificate" href="certificates/Coursera%20The%20Bits%20and%20Bytes%20of%20Computer%20Networking.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/computer-networking.webp"><br>The Bits and Bytes of Computer Networking</a>
-
-        <br><br>
-
-        <a class="certificate" href="certificates/Coursera%20Operating%20Systems%20and%20You%20Becoming%20a%20power%20user.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/becoming-a-power-user.webp"><br>Operating Systems and You: Becoming a Power User</a>
-
-        <br><br>
-
-        <a class="certificate" href="certificates/Coursera%20System%20Administration%20and%20IT%20Intfrastructure%20Services.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/system-administration.webp"><br>System Administration and IT Infrastructure Services</a>
-
-        <br><br>
-
-        <a class="certificate" href="certificates/Coursera%20IT%20Security%20Defense%20against%20the%20digital%20dark%20arts.pdf"><img class="certificate-img"  src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/defense-against-digital-dark-arts.webp"><br>IT Security: Defense Against the Digital Dark Arts</a>
-
-        <br><br>
-
-
+                <a class="social-link" href="https://ficsit.app/user/5GqLMHyzA3myPG"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/smr.webp" alt="SMR"><p class="social-link-label">SMR</p></a>
+            </div>
+            <br><br>
     </div>
 </div>
 <section class="footer">
