--- a/socials.html
+++ b/socials.html
@@ -5,7 +5,7 @@
     <title>SpaceGameDev's Website</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="en" http-equiv="Content-Language">
-    <meta content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and Digital Artist" name="description">
+    <meta content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and IT Support Specialist" name="description">
     <meta name="SpaceGameDev's Website"/>
     <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
     <link href="/manifest.json" rel="manifest">
