--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <p class="generic-text-header">My Socials</p>
     <br><br>
     <p class="socials-p">
-        Check my <a class="standard-link" href="socials.html">Socials</a> page to see my social media accounts.
+        Check the <a class="standard-link" href="socials.html">Socials</a> page to see my social media accounts.
         <br><br>
     </p>
 </section>
