Updated Downloads page

--- a/downloads.html
+++ b/downloads.html
@@ -58,13 +58,12 @@
 <div id="page-wrapper">
     <div class="content-wrapper">
 <section class="downloads"><br><br><br><br><br><br>
-    <p class="generic-text-header">Download Centre</p>
+    <p class="generic-text-header">Download Center</p>
     <br><br><br><br>
-    
-        <div class="project-download">
-            <p class="download-desc">All downloads are currently hosted on the <a class="standard-link" href="https://lfs.spacegamedev.com">SpaceGameDev Large File Storage (LFS)</a> website.</p><br><br><br>
-            </p><br>
-        </div>
+
+    <a class="dl-link" href="https://github.com/SpaceGameDev568/Charles/releases/latest">Charles</a>
+    <br><br><br><br><br>
+    <a class="dl-link" href="https://github.com/SpaceGameDev568/GoCleanYourComputer/releases/latest">GoCleanYourComputer</a>
 </section><br><br>
 </div>
 </div>
