Added my phone number

--- a/index.html
+++ b/index.html
@@ -209,9 +209,11 @@
         help with one of my projects, please visit the <a class="standard-link" href="support.html">support page</a> for
         info on how to submit a ticket.
         <br><br>
-        By Email: <a class="standard-link" href="mailto:space@spacegamedev.com">space@spacegamedev.com</a>
+        Email: <a class="standard-link" href="mailto:space@spacegamedev.com">space@spacegamedev.com</a>
         <br><br>
         Discord: @spacegamedev
+        <br><br>
+        Phone: <a class="standard-link" href="tel:17049754469">+1 704-975-4469</a>
     </p>
 </section>
 <br><br>
