Removed unnecessary css classes on projects page

--- a/projects.html
+++ b/projects.html
@@ -53,14 +53,14 @@
 <br><br>
 <p class="projects-subsection-h">Software</p>
 <br><br><br>
-<div class="charles-project">
+<div class="project-wrapper">
 <p class="project-name">Charles</p><br>
 <p class="project-desc">Charles is a command line app I'm working on to learn the fundamentals of Go (golang).<br> It's purpose is to automate various tasks with one simple command.</p>
 <br>
 <a href="https://github.com/SpaceGameDev568/Charles" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
 </div><br><br><br>
 
-<div class="charles-project">
+<div class="project-wrapper">
   <p class="project-name">Go Clean Your Computer</p><br>
   <p class="project-desc">GoCleanYourComputer is a GUI app I created in C# to access and execute Windows maintenance tasks easily.</p>
   <br>
@@ -69,34 +69,34 @@
 <!--<p class="projects-subsection-h">Games</p>-->
 <p class="projects-subsection-h">Mods</p>
 <br><br><br>
-<div class="sf-mod-project">
+<div class="project-wrapper">
 <p class="project-name">Factory Props</p><br>
 <p class="project-desc">Factory Props is a mod for Satisfactory that repurposes assets from the game as decorative buildings.</p>
 <br>
 <a href="https://github.com/SpaceGameDev568/Factory_Prop_Mod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/Factory_Prop_Mod" class="download-link">Download</a>
 </div><br><br><br>
 
-<div class="sf-mod-project">
+<div class="project-wrapper">
 <p class="project-name">Remove All Annoyances</p><br>
 <p class="project-desc">Remove All Annoyances is a mod for Satisfactory that removes annoying things from the world.</p>
 <br>
 <a href="https://github.com/SpaceGameDev568/RemoveAllAnnoyances" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/RemoveAllAnnoyances" class="download-link">Download</a>
 </div><br><br><br>
 
-<div class="sf-mod-project">
+<div class="project-wrapper">
 <p class="project-name">SatisWHACKtory</p><br>
 <p class="project-desc">SatisWHACKtory is a mod for Satisfactory that adds some fun obstacles to the game to cause chaos in multiplayer sessions.</p>
 <br>
 <a href="https://github.com/SpaceGameDev568/ObstacleMod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/ObstacleMod" class="download-link">Download</a>
 </div><br><br><br>
 
-<div class="sf-mod-project">
+<div class="project-wrapper">
 <p class="project-name">Satisfactory Discord Rich Presence</p><br>
 <p class="project-desc">This is a mod for Satisfactory that lets you see your Satisfactory presence info on your Discord profile.</p>
 <br>
 <a href="https://github.com/SpaceGameDev568/FG_DiscordRP" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/FG_DiscordRP" class="download-link">Download</a>
 </div><br><br><br>
-  <div class="sf-mod-project">
+  <div class="project-wrapper">
     <p class="project-name">Better Grass</p><br>
     <p class="project-desc">This is a mod for Satisfactory that lets you customize how the grass looks in-game</p>
     <br>
