--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
     
         <img alt="" class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
     
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img alt="Toggle Light or Dark Theme"
-                                                                            class="theme-icon"
-                                                                            src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg">
+    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img alt="Toggle Light or Dark Theme" class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/change-theme.svg">
     </button>
     <div class="sidebar" id="websidebar">
         <button class="closebtn" onclick="closeNav()"><img
