Iconography improvements and new scrollbar

--- a/certifications.html
+++ b/certifications.html
@@ -23,13 +23,6 @@
           rel="preload">
     <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/FlowCircular.woff2"
-          rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/JetBrainsMono.woff2"
-          rel="preload">
-    <link as="font" crossorigin="anonymous"
-          href="https://spacegamedev-assets.pages.dev/css/fonts/JetBrainsMono-Italic.woff2"
-          rel="preload">
 </head>
 <!-- End Head, Start Body -->
 <body>
@@ -51,9 +44,7 @@
 
     <img alt="" class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
 
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img alt="Toggle Light or Dark Theme"
-                                                                            class="theme-icon"
-                                                                            src="https://spacegamedev-assets.pages.dev/images/ui/change-theme.svg">
+    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://spacegamedev-assets.pages.dev/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://spacegamedev-assets.pages.dev/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
     </button>
     <div class="sidebar" id="websidebar">
         <button class="closebtn" onclick="closeNav()"><img
