--- a/downloads.html
+++ b/downloads.html
@@ -38,10 +38,8 @@
             alt="Open Sidebar"></button>
     
         <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
-    
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon"
-                                                                            src="https://spacegamedev-assets.pages.dev/images/ui/change-theme.svg"
-                                                                            alt="Toggle Light or Dark Theme"></button>
+
+    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://spacegamedev-assets.pages.dev/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://spacegamedev-assets.pages.dev/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
     <div id="websidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()"><img
                 src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton"
