Updated certifications page

--- a/certifications.html
+++ b/certifications.html
@@ -63,7 +63,7 @@
 <div id="page-wrapper">
     <div class="content-wrapper">
         <br><br><br><br><br><br>
-    <p class="generic-text-header">Certifications</p>
+    <p class="generic-text-header">Certificates</p>
         <br><br><br><br>
         <p class="certifications-text">These are the certifications that I have earned and courses I have taken. You can view the full list on my <a class="standard-link" href="linkedin.html">LinkedIn</a> profile.</p>
 
