Improve PageSpeed score

--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/ico"
           href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
-    <link rel="stylesheet" href="https://spacegamedev-assets.pages.dev/css/fonts.css">
+    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="preload" as="style">
     <link rel="stylesheet" href="css\downloads.css">
     <link rel="preconnect" href="https://spacegamedev-assets.pages.dev"/>
     <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2" as="font"
