--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css\main.css" rel="stylesheet">
-    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="stylesheet">
+    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="preload" as="style">
     <link href="css\home.css" rel="stylesheet">
     <link href="https://spacegamedev-assets.pages.dev" rel="preconnect"/>
     <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2"
@@ -67,7 +67,7 @@
     
         <br><br><br><br><br><br>
         <img alt="SpaceGameDev's Avatar" class="sgd-logo"
-             src="https://spacegamedev-assets.pages.dev/images/webp/sgd-logo-384.webp">
+             src="https://spacegamedev-assets.pages.dev/images/webp/sgd-logo-256.webp">
         <br><br>
         <div class="intro">
             <p>
