--- a/socials.html
+++ b/socials.html
@@ -12,7 +12,7 @@
     <link href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css\main.css" rel="stylesheet">
-    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="stylesheet">
+    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="preload" as="style">
     <link href="css\socials.css" rel="stylesheet">
     <link href="https://spacegamedev-assets.pages.dev" rel="preconnect"/>
     <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2"
