--- a/certifications.html
+++ b/certifications.html
@@ -65,35 +65,35 @@
         <br><br><br><br><br><br>
     <p class="generic-text-header">Certificates</p>
         <br><br><br><br>
-        <p class="certifications-text">These are the certifications that I have earned and courses I have taken. You can view the full list on my <a class="standard-link" href="linkedin.html">LinkedIn</a> profile.</p>
+        <p class="certifications-text">These are the certificates that I have earned and courses I have taken. You can view the full list on my <a class="standard-link" href="linkedin.html">LinkedIn</a> profile.</p>
 
         <br><br>
 
-        <a class="certifications-badge" href="https://www.credly.com/badges/a0e09d60-b274-4675-9ad3-db3cafb271dd"><img src="https://spacegamedev-assets.pages.dev/images/webp/google-it-support-badge.webp"></a>
+        <a class="certifications-badge" href="https://www.credly.com/badges/a0e09d60-b274-4675-9ad3-db3cafb271dd"><img src="https://spacegamedev-assets.pages.dev/images/webp/google-it-support-badge.webp" alt="Google IT Support Specialization"><br>Google IT Support Specialization</a>
+
+        <br><br><br>
+
+        <a class="certificate" href="certificates/Coursera%20Google%20IT%20Support.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/it-support-thumbnail.webp" alt="Google IT Support Certificate"><br>Google IT Support Certificate</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20Google%20IT%20Support.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/it-support-thumbnail.webp"><br>Google IT Support</a>
+        <a class="certificate" href="certificates/Coursera%20Technical%20Support%20Fundamentals.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/tech-support-fundamentals.webp" alt="Technical Support Fundamentals"><br>Technical Support Fundamentals</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20Technical%20Support%20Fundamentals.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/tech-support-fundamentals.webp"><br>Technical Support Fundamentals</a>
+        <a class="certificate" href="certificates/Coursera%20The%20Bits%20and%20Bytes%20of%20Computer%20Networking.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/computer-networking.webp" alt="The Bits and Bytes of Computer Networking"><br>The Bits and Bytes of Computer Networking</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20The%20Bits%20and%20Bytes%20of%20Computer%20Networking.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/computer-networking.webp"><br>The Bits and Bytes of Computer Networking</a>
+        <a class="certificate" href="certificates/Coursera%20Operating%20Systems%20and%20You%20Becoming%20a%20power%20user.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/becoming-a-power-user.webp" alt="Operating Systems and You: Becoming a Power User"><br>Operating Systems and You: Becoming a Power User</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20Operating%20Systems%20and%20You%20Becoming%20a%20power%20user.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/becoming-a-power-user.webp"><br>Operating Systems and You: Becoming a Power User</a>
+        <a class="certificate" href="certificates/Coursera%20System%20Administration%20and%20IT%20Intfrastructure%20Services.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/system-administration.webp" alt="System Administration and IT Infrastructure Services"><br>System Administration and IT Infrastructure Services</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20System%20Administration%20and%20IT%20Intfrastructure%20Services.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/system-administration.webp"><br>System Administration and IT Infrastructure Services</a>
-
-        <br><br>
-
-        <a class="certificate" href="certificates/Coursera%20IT%20Security%20Defense%20against%20the%20digital%20dark%20arts.pdf"><img class="certificate-img"  src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/defense-against-digital-dark-arts.webp"><br>IT Security: Defense Against the Digital Dark Arts</a>
+        <a class="certificate" href="certificates/Coursera%20IT%20Security%20Defense%20against%20the%20digital%20dark%20arts.pdf"><img class="certificate-img"  src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/defense-against-digital-dark-arts.webp" alt="IT Security: Defense Against the Digital Dark Arts"><br>IT Security: Defense Against the Digital Dark Arts</a>
 
         <br><br>
 
