--- a/certifications.html
+++ b/certifications.html
@@ -57,6 +57,7 @@
         <a class="sidebar-link" href="downloads.html">Downloads</a>
         <a class="sidebar-link" href="support.html">Support</a>
         <a class="sidebar-link" href="socials.html">Socials</a>
+        <iframe src="https://status.spacegamedev.com/badge?theme=dark" width="250" height="30" frameborder="0" scrolling="no"></iframe>
     </div>
 </div>
 <!-- End Header Section-->
