Change asset store location

--- a/socials.html
+++ b/socials.html
@@ -9,19 +9,19 @@
     <meta name="SpaceGameDev's Website"/>
     <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
     <link href="/manifest.json" rel="manifest">
-    <link href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp" rel="shortcut icon"
+    <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css\main.css" rel="stylesheet">
-    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="preload" as="style">
+    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link href="css\socials.css" rel="stylesheet">
-    <link href="https://spacegamedev-assets.pages.dev" rel="preconnect"/>
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2"
+    <link href="https://assets.spacegamedev.com" rel="preconnect"/>
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans-Italic.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
           rel="preload">
 </head>
 <!-- End Head, Start Body -->
@@ -37,19 +37,19 @@
 <!-- Start Header Section -->
 <div class="header">
     <div class="header-bg"></div>
-    <!--<a><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
+    <!--<a><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
     <button class="openbtn" onclick="openNav()" title="Navigation"><img
             alt="Open Sidebar" class="openbtn-img"
-            src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg"></button>
+            src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg"></button>
 
-    <img alt="" class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
+    <img alt="" class="header-logo" src="https:\\assets.spacegamedev.com/images/webp/avatar-outline.webp">
 
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://spacegamedev-assets.pages.dev/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://spacegamedev-assets.pages.dev/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
+    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://assets.spacegamedev.com/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://assets.spacegamedev.com/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
     </button>
     <div class="sidebar" id="websidebar">
         <button class="closebtn" onclick="closeNav()"><img
                 alt="Close Navigation" aria-label="Close the navigation bar."
-                class="closenavbutton" src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg"
+                class="closenavbutton" src="https://assets.spacegamedev.com/images/ui/menu-x.svg"
                 title="Close Navigation"></button>
         <a class="sidebar-link" href="index.html">Home</a>
         <a class="sidebar-link" href="certifications.html">Certifications</a>
@@ -67,17 +67,17 @@
             <p class="generic-text-header">My Socials</p>
             <br><br>
             <div class="socials-links">
-                <a class="social-link" href="https://github.com/SpaceGameDev568"><img class="github-social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/github.svg" alt="GitHub"><p class="social-link-label">GitHub</p></a>
+                <a class="social-link" href="https://github.com/SpaceGameDev568"><img class="github-social-icon" src="https://assets.spacegamedev.com/images/logos/github.svg" alt="GitHub"><p class="social-link-label">GitHub</p></a>
 
-                <a class="social-link" href="linkedin.html"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/linkedin.webp" alt="LinkedIn"><p class="social-link-label">LinkedIn</p></a>
+                <a class="social-link" href="linkedin.html"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/linkedin.webp" alt="LinkedIn"><p class="social-link-label">LinkedIn</p></a>
 
-                <a class="social-link" href="https://youtube.com/@spacegamedev"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/youtube.webp" alt="YouTube"><p class="youtube-link-label">YouTube</p></a>
+                <a class="social-link" href="https://youtube.com/@spacegamedev"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/youtube.webp" alt="YouTube"><p class="youtube-link-label">YouTube</p></a>
 
-                <a class="social-link" href="https://steamcommunity.com/id/spacegamedev/"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/steam.webp" alt="Steam"><p class="social-link-label">Steam</p></a>
+                <a class="social-link" href="https://steamcommunity.com/id/spacegamedev/"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/steam.webp" alt="Steam"><p class="social-link-label">Steam</p></a>
 
-                <a class="social-link" href="https://trello.com/u/spacegamedev568/activity"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/trello.webp" alt="Trello"><p class="social-link-label">Trello</p></a>
+                <a class="social-link" href="https://trello.com/u/spacegamedev568/activity"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/trello.webp" alt="Trello"><p class="social-link-label">Trello</p></a>
 
-                <a class="social-link" href="https://ficsit.app/user/5GqLMHyzA3myPG"><img class="social-icon" src="https://spacegamedev-assets.pages.dev/images/logos/smr.webp" alt="SMR"><p class="social-link-label">SMR</p></a>
+                <a class="social-link" href="https://ficsit.app/user/5GqLMHyzA3myPG"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/smr.webp" alt="SMR"><p class="social-link-label">SMR</p></a>
             </div>
             <br><br>
     </div>
