--- a/certifications.html
+++ b/certifications.html
@@ -9,19 +9,19 @@
     <meta name="SpaceGameDev's Website"/>
     <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
     <link href="/manifest.json" rel="manifest">
-    <link href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp" rel="shortcut icon"
+    <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css\main.css" rel="stylesheet">
-    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="preload" as="style">
+    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link href="css\certifications.css" rel="stylesheet">
-    <link href="https://spacegamedev-assets.pages.dev" rel="preconnect"/>
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2"
+    <link href="https://assets.spacegamedev.com" rel="preconnect"/>
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans-Italic.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
           rel="preload">
 </head>
 <!-- End Head, Start Body -->
@@ -37,19 +37,19 @@
 <!-- Start Header Section -->
 <div class="header">
     <div class="header-bg"></div>
-    <!--<a><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
+    <!--<a><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
     <button class="openbtn" onclick="openNav()" title="Navigation"><img
             alt="Open Sidebar" class="openbtn-img"
-            src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg"></button>
+            src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg"></button>
 
-    <img alt="" class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
+    <img alt="" class="header-logo" src="https:\\assets.spacegamedev.com/images/webp/avatar-outline.webp">
 
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://spacegamedev-assets.pages.dev/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://spacegamedev-assets.pages.dev/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
+    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://assets.spacegamedev.com/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://assets.spacegamedev.com/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
     </button>
     <div class="sidebar" id="websidebar">
         <button class="closebtn" onclick="closeNav()"><img
                 alt="Close Navigation" aria-label="Close the navigation bar."
-                class="closenavbutton" src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg"
+                class="closenavbutton" src="https://assets.spacegamedev.com/images/ui/menu-x.svg"
                 title="Close Navigation"></button>
         <a class="sidebar-link" href="index.html">Home</a>
         <a class="sidebar-link" href="certifications.html">Certifications</a>
@@ -70,31 +70,31 @@
 
         <br><br>
 
-        <a class="certifications-badge" href="https://www.credly.com/badges/a0e09d60-b274-4675-9ad3-db3cafb271dd"><img src="https://spacegamedev-assets.pages.dev/images/webp/google-it-support-badge.webp" alt="Google IT Support Specialization"><br>Google IT Support Specialization</a>
+        <a class="certifications-badge" href="https://www.credly.com/badges/a0e09d60-b274-4675-9ad3-db3cafb271dd"><img src="https://assets.spacegamedev.com/images/webp/google-it-support-badge.webp" alt="Google IT Support Specialization"><br>Google IT Support Specialization</a>
 
         <br><br><br>
 
-        <a class="certificate" href="certificates/Coursera%20Google%20IT%20Support.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/it-support-thumbnail.webp" alt="Google IT Support Certificate"><br>Google IT Support Certificate</a>
+        <a class="certificate" href="certificates/Coursera%20Google%20IT%20Support.pdf"><img class="certificate-img" src="https://assets.spacegamedev.com/images/webp/thumbnails/it-support-thumbnail.webp" alt="Google IT Support Certificate"><br>Google IT Support Certificate</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20Technical%20Support%20Fundamentals.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/tech-support-fundamentals.webp" alt="Technical Support Fundamentals"><br>Technical Support Fundamentals</a>
+        <a class="certificate" href="certificates/Coursera%20Technical%20Support%20Fundamentals.pdf"><img class="certificate-img" src="https://assets.spacegamedev.com/images/webp/thumbnails/tech-support-fundamentals.webp" alt="Technical Support Fundamentals"><br>Technical Support Fundamentals</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20The%20Bits%20and%20Bytes%20of%20Computer%20Networking.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/computer-networking.webp" alt="The Bits and Bytes of Computer Networking"><br>The Bits and Bytes of Computer Networking</a>
+        <a class="certificate" href="certificates/Coursera%20The%20Bits%20and%20Bytes%20of%20Computer%20Networking.pdf"><img class="certificate-img" src="https://assets.spacegamedev.com/images/webp/thumbnails/computer-networking.webp" alt="The Bits and Bytes of Computer Networking"><br>The Bits and Bytes of Computer Networking</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20Operating%20Systems%20and%20You%20Becoming%20a%20power%20user.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/becoming-a-power-user.webp" alt="Operating Systems and You: Becoming a Power User"><br>Operating Systems and You: Becoming a Power User</a>
+        <a class="certificate" href="certificates/Coursera%20Operating%20Systems%20and%20You%20Becoming%20a%20power%20user.pdf"><img class="certificate-img" src="https://assets.spacegamedev.com/images/webp/thumbnails/becoming-a-power-user.webp" alt="Operating Systems and You: Becoming a Power User"><br>Operating Systems and You: Becoming a Power User</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20System%20Administration%20and%20IT%20Intfrastructure%20Services.pdf"><img class="certificate-img" src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/system-administration.webp" alt="System Administration and IT Infrastructure Services"><br>System Administration and IT Infrastructure Services</a>
+        <a class="certificate" href="certificates/Coursera%20System%20Administration%20and%20IT%20Intfrastructure%20Services.pdf"><img class="certificate-img" src="https://assets.spacegamedev.com/images/webp/thumbnails/system-administration.webp" alt="System Administration and IT Infrastructure Services"><br>System Administration and IT Infrastructure Services</a>
 
         <br><br>
 
-        <a class="certificate" href="certificates/Coursera%20IT%20Security%20Defense%20against%20the%20digital%20dark%20arts.pdf"><img class="certificate-img"  src="https://spacegamedev-assets.pages.dev/images/webp/thumbnails/defense-against-digital-dark-arts.webp" alt="IT Security: Defense Against the Digital Dark Arts"><br>IT Security: Defense Against the Digital Dark Arts</a>
+        <a class="certificate" href="certificates/Coursera%20IT%20Security%20Defense%20against%20the%20digital%20dark%20arts.pdf"><img class="certificate-img"  src="https://assets.spacegamedev.com/images/webp/thumbnails/defense-against-digital-dark-arts.webp" alt="IT Security: Defense Against the Digital Dark Arts"><br>IT Security: Defense Against the Digital Dark Arts</a>
 
         <br><br>
 
