--- a/downloads.html
+++ b/downloads.html
@@ -6,18 +6,18 @@
     <meta name="description" content="Download the latest releases of SpaceGameDev Software.">
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico"
-          href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp"/>
+          href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
-    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="preload" as="style">
+    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link rel="stylesheet" href="css\downloads.css">
-    <link rel="preconnect" href="https://spacegamedev-assets.pages.dev"/>
-    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2" as="font"
+    <link rel="preconnect" href="https://assets.spacegamedev.com"/>
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font"
           crossorigin="anonymous">
-    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans.woff2" as="font"
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font"
           crossorigin="anonymous">
-    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans-Italic.woff2" as="font"
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font"
           crossorigin="anonymous">
-    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2" as="font"
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font"
           crossorigin="anonymous">
 </head>
 <!-- End Head, Start Body -->
@@ -34,15 +34,15 @@
 <div class="header">
     <div class="header-bg"></div>
     <button class="openbtn" onclick="openNav()" title="Navigation"><img
-            src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="openbtn-img"
+            src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img"
             alt="Open Sidebar"></button>
     
-        <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
+        <img class="header-logo" src="https:\\assets.spacegamedev.com/images/webp/avatar-outline.webp" alt="">
 
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://spacegamedev-assets.pages.dev/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://spacegamedev-assets.pages.dev/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
+    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://assets.spacegamedev.com/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://assets.spacegamedev.com/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
     <div id="websidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()"><img
-                src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton"
+                src="https://assets.spacegamedev.com/images/ui/menu-x.svg" class="closenavbutton"
                 title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
         <a href="index.html" class="sidebar-link">Home</a>
         <a class="sidebar-link" href="certifications.html">Certifications</a>
