--- a/resume.html
+++ b/resume.html
@@ -9,26 +9,26 @@
     <meta name="SpaceGameDev's Website"/>
     <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
     <link href="/manifest.json" rel="manifest">
-    <link href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp" rel="shortcut icon"
+    <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css\main.css" rel="stylesheet">
-    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="preload" as="style">
+    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link href="css\resume.css" rel="stylesheet">
-    <link href="https://spacegamedev-assets.pages.dev" rel="preconnect"/>
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2"
+    <link href="https://assets.spacegamedev.com" rel="preconnect"/>
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans-Italic.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/FlowCircular.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/FlowCircular.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/JetBrainsMono.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono.woff2"
           rel="preload">
     <link as="font" crossorigin="anonymous"
-          href="https://spacegamedev-assets.pages.dev/css/fonts/JetBrainsMono-Italic.woff2"
+          href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono-Italic.woff2"
           rel="preload">
 </head>
 <!-- End Head, Start Body -->
