Revert "idk how to do CORS"
This reverts commit 4e96a64771b7195b383ab9d7391fd5618533dc6a.

--- a/support.html
+++ b/support.html
@@ -10,10 +10,10 @@
     <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link rel="stylesheet" href="css\support.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font" >
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font" >
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font" >
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font" >
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font" crossorigin="use-credentials">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font" crossorigin="use-credentials">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font" crossorigin="use-credentials">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font" crossorigin="use-credentials">
   </head>
   <!-- End Head, Start Body -->
   <body>
