--- a/socials.html
+++ b/socials.html
@@ -15,13 +15,13 @@
     <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link href="css\socials.css" rel="stylesheet">
     <link href="https://assets.spacegamedev.com" rel="preconnect"/>
-    <link as="font"  href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
+    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
           rel="preload">
-    <link as="font"  href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
+    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
           rel="preload">
-    <link as="font"  href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
+    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
           rel="preload">
-    <link as="font"  href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
+    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
           rel="preload">
 </head>
 <!-- End Head, Start Body -->
