Revert "Change cross-origin policy"
This reverts commit bf34022a7fdaa4cd892a13d91f8a85deffaac0e4.

--- a/certifications.html
+++ b/certifications.html
@@ -15,13 +15,13 @@
     <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link href="css\certifications.css" rel="stylesheet">
     <link href="https://assets.spacegamedev.com" rel="preconnect"/>
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
           rel="preload">
 </head>
 <!-- End Head, Start Body -->
