--- a/downloads.html
+++ b/downloads.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="css\downloads.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
     <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font"
-          crossorigin="use-credentials">
+          crossorigin="anonymous">
     <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font"
-          crossorigin="use-credentials">
+          crossorigin="anonymous">
     <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font"
-          crossorigin="use-credentials">
+          crossorigin="anonymous">
     <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font"
-          crossorigin="use-credentials">
+          crossorigin="anonymous">
 </head>
 <!-- End Head, Start Body -->
 <body>
