--- a/resume.html
+++ b/resume.html
@@ -15,19 +15,19 @@
     <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link href="css\resume.css" rel="stylesheet">
     <link href="https://assets.spacegamedev.com" rel="preconnect"/>
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/FlowCircular.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/FlowCircular.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials" href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono.woff2"
+    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono.woff2"
           rel="preload">
-    <link as="font" crossorigin="use-credentials"
+    <link as="font" crossorigin="anonymous"
           href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono-Italic.woff2"
           rel="preload">
 </head>
