--- a/projects.html
+++ b/projects.html
@@ -126,6 +126,8 @@
       Open Sans: <a href="https://fonts.google.com/specimen/Open+Sans" class="footer-link">Open Sans on Google Fonts</a>
       <br>
       Orbitron: <a href="https://fonts.google.com/specimen/Orbitron" class="footer-link">Orbitron on Google Fonts</a>
+      <br><br>
+      <a class="betterstack-attribution" target="_blank" href="https://uptime.betterstack.com"><img style="width: 130px; height: 52px;" alt="Better Stack Website Monitoring" src="https://uptime.betterstack.com/assets/static_assets/badges/dark.png" /></a>
     </p>
     </section>
   </body>
