--- a/resume.html
+++ b/resume.html
@@ -33,6 +33,9 @@
 </head>
 <!-- End Head, Start Body -->
 <body>
+<p class="generic-text-header">
+    This page is currently in development, please ignore it.
+</p>
 <dl-header>
     My resume is also available for download as a PDF.
     <a class="resume-dl">Download</a>
