Fix Better Stack status badge theming

--- a/downloads.html
+++ b/downloads.html
@@ -50,7 +50,7 @@
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
         <a class="sidebar-link" href="socials.html">Socials</a>
-        <iframe class="betterstack-badge" src="https://status.spacegamedev.com/badge?theme=dark" width="250" height="30" frameborder="0" scrolling="no"></iframe>
+        <iframe class="betterstack-badge" src="https://status.spacegamedev.com/badge?theme=dark" id="betterstack-badge" width="250" height="30" frameborder="0" scrolling="no"></iframe>
     </div>
 </div>
 <!-- End Header Section-->
