More Better Stack badge fixes

--- a/support.html
+++ b/support.html
@@ -81,7 +81,7 @@
       <br>
       Orbitron: <a href="https://fonts.google.com/specimen/Orbitron" class="footer-link">Orbitron on Google Fonts</a>
       <br><br>
-      <a class="betterstack-attribution" target="_blank" href="https://uptime.betterstack.com"><img style="width: 130px; height: 52px;" alt="Better Stack Website Monitoring" src="https://uptime.betterstack.com/assets/static_assets/badges/dark.png" /></a>
+      <a class="betterstack-attribution" target="_blank" href="https://uptime.betterstack.com"><img id="betterstack-attribution" style="width: 130px; height: 52px;" alt="Better Stack Website Monitoring" src="https://uptime.betterstack.com/assets/static_assets/badges/dark.png" /></a>
     </p>
     </section>
   </body>
